# qysqa

./: .dist.env  .env  .env.example  .flaskenv  .gitignore  Dockerfile  LICENSE  Procfile  README.md  TODO.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  commands.py  config.py  database.py  extensions.py
app/auth/: __init__.py  forms.py  models.py  views.py
app/main/: __init__.py  forms.py  models.py  token.py  validators.py  views.py
app/static/: font.css  style.css
app/static/styles/: about.css  base.css  clicks.css  error.css  footer.css  index.css  navbar.css  profile.css
app/templates/: base.html  error.html  footer.html  navbar.html
app/templates/auth/: login.html  profile.html  register.html
app/templates/main/: about.html  clicks.html  index.html  lookup.html  original-url.html  original.html  tracker.html  url.html
instance/: db.sqlite3
migrations/versions/: dc2cd5df2465_remove_column_active_from_users_due_to_.py  ed344db43339_bcrypt_to_werkzeug_security.py  fee6345166c6_add_column_active_to_users.py
qysqa/: __init__.py  __main__.py  config.py
qysqa/config/: __init__.py  main.yaml
qysqa/main/: forms.py  models.py  token.py  views.py
qysqa/templates/: base.html
qysqa/templates/main/: clicks.html  error.html  index.html  lookup.html  original-url.html  removed.html  tracker.html
