[tool.poetry]
name = "qysqa"
version = "1.4"
description = "URL shortener website"
authors = ["Dastan Ozgeldi <ozgdastan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^1.0.0"
python-dotenv = "^0.19.2"
psycopg2 = "^2.9.3"
Flask-Login = "^0.5.0"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
isort = "^5.10.1"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = "migrations"

[tool.isort]
skip = "migrations"
